Flip to Lake Fortescue standard

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 /* ------------------------------------------------------------------
-   Fortescue Lake Cottage Association – Global Stylesheet
+   Lake Fortescue Cottage Association – Global Stylesheet
 ------------------------------------------------------------------ */
 
 /* 1. Web Font */
