Edits from google doc copy

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 /* ------------------------------------------------------------------
-   Lake Fortescue Cottage Association – Global Stylesheet
+   Lake Fortescue Cottagers’ Association – Global Stylesheet
 ------------------------------------------------------------------ */
 
 /* 1. Web Font */
