--- a/css/styles.css
+++ b/css/styles.css
@@ -37,13 +37,19 @@ h1, h2, h3 {
 }
 p {
   margin: 0 0 1.25rem;
+  line-height: 1.6;
+  font-size: 1.8 rem;
 }
 ul {
   margin: 0 0 1.25rem 1.25rem;
   padding: 0;
+  line-height: 1.6;
+  font-size: 1.2;
 }
 li {
   margin-bottom: .9rem;
+  line-height: 1.6;
+  font-size: 1.2;
 }
 /* divider between sections */
 main section:not(:first-of-type)::before {
@@ -86,11 +92,17 @@ header .container {
   justify-content: center;
 }
 
-header h1 {
-  color: #fff;
+h1 {
   font-size: 2.5rem;
-  margin-bottom: .5rem;
+  font-weight: 700;
 }
+h2 {
+  font-size: 2rem;
+  font-weight: 700;
+  margin-bottom: 1rem;
+}
+
+
 nav ul {
   list-style: none;
   display: flex;
@@ -181,15 +193,16 @@ footer p {
 
 /* 9. Hero Grid Layout */
 .hero-grid {
+  grid-template-columns: 3fr 2fr; /* more space for text */
+  gap: 2.5rem;
   display: grid;
-  grid-template-columns: 1fr 1fr;
   grid-template-rows: auto 1fr;
   grid-template-areas:
     "heading heading"
     "text image";
-  gap: 2rem;
   align-items: start;
 }
+
 
 .hero-grid h2 {
   grid-area: heading;
@@ -228,7 +241,7 @@ footer p {
 
 .hero-image {
   grid-area: image;
-  max-width: 80%;        /* or whatever size you prefer */
+  max-width: 90%;        /* or whatever size you prefer */
   margin: 1rem 0;         /* only top/bottom spacing */
   justify-self: center;      /* push to the right edge */
   overflow: hidden;
@@ -293,7 +306,7 @@ footer p {
 /* For small inline images like posters */
 .inline-image {
   float: right;             /* push image to the right */
-  max-width: 300px;         /* keep poster small */
+  max-width: 250px;         /* keep image small */
   margin: 0 0 1rem 1rem;    /* spacing from text */
   border-radius: 4px;       /* optional */
   box-shadow: 0 2px 6px rgba(0,0,0,0.1);
@@ -317,7 +330,8 @@ footer p {
 }
 
 .side-by-side .inline-image {
-  flex: 0 0 200px; /* fixed poster width */
+  flex: 0 0 300px; /* fixed poster width */
+  margin: 10 rem 10 rem 0; /* right margin for spacing */
 }
 
 .side-by-side .text {
