--- a/css/styles.css
+++ b/css/styles.css
@@ -32,24 +32,24 @@ section {
   margin-bottom: 2.25rem;
 }
 h1, h2, h3 {
-  margin: 0 0 .75rem;
+  margin: 1.5rem 0 1.5rem 0;
   line-height: 1.3;
 }
 p {
-  margin: 0 0 1.25rem;
+  margin: 0 0 1.5rem;
   line-height: 1.6;
-  font-size: 1.8 rem;
+  font-size: 1.1rem;
 }
 ul {
   margin: 0 0 1.25rem 1.25rem;
   padding: 0;
   line-height: 1.6;
-  font-size: 1.2;
+  font-size: 1.1rem;
 }
 li {
   margin-bottom: .9rem;
   line-height: 1.6;
-  font-size: 1.2;
+  font-size: 1.0rem;
 }
 /* divider between sections */
 main section:not(:first-of-type)::before {
