--- a/css/styles.css
+++ b/css/styles.css
@@ -71,7 +71,7 @@ header {
   background:
     linear-gradient(
       to bottom,
-      rgba(15, 177, 221, 0),
+      rgba(16, 185, 232, 0.1),
       rgba(242, 247, 247, 0)
     ),
     url('../assets/images/loons-1-thom-crop-top.jpg') center/cover no-repeat;
@@ -81,7 +81,7 @@ header::before {
   content: '';
   position: absolute;
   inset: 0;
-  background: rgba(0, 0, 0, 0.55);
+  background: rgba(0, 0, 0, 0.01);
 }
 
 header .container {
@@ -149,7 +149,7 @@ nav a.active {
 
 /* 7. Footer */
 footer {
-  background-color: #2c3e50;
+  background-color: #3a648e;
   color: #fff;
   text-align: center;
   padding: 1rem 0;
@@ -306,8 +306,6 @@ footer p {
   /* Collapse side-by-side layout */
   .side-by-side {
     flex-direction: column; /* stack image and text vertically */
-    align-items: center;    /* center items horizontally */
-    text-align: center;     /* center text for consistency */
   }
 
   .side-by-side .inline-image {
