--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 /* ------------------------------------------------------------------
-   Lake Fortescue Cottagers’ Association – Global Stylesheet
+   Fortescue Lake Cottagers’ Association – Global Stylesheet
 ------------------------------------------------------------------ */
 
 /* 1. Web Font */
@@ -68,14 +68,40 @@ header {
   align-items: center;
   justify-content: center;
   color: #fff;
+  text-shadow: #333;
   background:
     linear-gradient(
       to bottom,
       rgba(16, 185, 232, 0.1),
-      rgba(242, 247, 247, 0)
+      rgba(30, 41, 41, 0)
     ),
     url('../assets/images/loons-1-thom-crop-top.jpg') center/cover no-repeat;
 }
+
+nav.slim-bar {
+  background-color: #145494;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center; /* center links vertically */
+  gap: 4em;            /* space between links */
+  padding: 0.4em 0;
+}
+
+nav.slim-bar a {
+  color: #fff;
+  text-decoration: none;
+  font-size: 1rem;
+  padding: 0.25em 0.5em; /* space inside buttons */
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
+}
+
+nav.slim-bar a:hover,
+nav.slim-bar a.active {
+  background-color: #1e40af;
+}
+
 
 header::before {
   content: '';
@@ -149,7 +175,7 @@ nav a.active {
 
 /* 7. Footer */
 footer {
-  background-color: #3a648e;
+  background-color: #145494;
   color: #fff;
   text-align: center;
   padding: 1rem 0;
@@ -220,7 +246,7 @@ footer p {
   display: block;
   width: 100%;              /* full width of container */
   margin: 1rem 0;           /* vertical spacing */
-  text-align: center;       /* center figcaption text */
+  text-align: left;       /* center figcaption text */
 }
 
 .hero-image-single img {
@@ -236,7 +262,7 @@ footer p {
   font-style: italic;
   font-size: .9rem;
   color: #555;
-  text-align: center;
+  text-align: left;
 }
 
 .hero-image {
@@ -263,7 +289,7 @@ footer p {
   font-style: italic;       /* make it italic */
   font-size: .9rem;
   color: #555;
-  text-align: center;
+  text-align: left;
   margin-top: .5rem;
 }
 
